port back to java 11 for better compatibility w/ the current set of java tools